Fix alignment of headings and change background

--- a/src/sass/components/_themes.sass
+++ b/src/sass/components/_themes.sass
@@ -2,6 +2,9 @@
 	text-align: center
 	min-height: 1000px
 
+	+r(768)
+		text-align: left
+
 .themes__title
 	font-size: 80px
 	color: $white
@@ -11,8 +14,7 @@
 		margin-bottom: 320px
 
 .themes-wrapper
-	//TODO: Change background to image
-	background: linear-gradient(100.38deg, #00E4FF 0%, #D200F4 47.75%, #D40000 93.55%)
+	background: linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("/img/header-bg-light.jpg");
 	width: 100%
 	padding: 100px
 	position: relative
